--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
             <div class="actions">
                 <button id="check" class="btn btn-success">こたえあわせ</button>
                 <button id="clear" class="btn btn-warning">ぜんぶけす</button>
+                <button id="print" class="btn btn-print">いんさつ</button>
             </div>
         </div>
     </div>
