--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>クロスワードパズル</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?v=2">
 </head>
 <body>
     <div class="container">
@@ -14,6 +14,7 @@
             <label>よこ <input type="number" id="width" value="8" min="5" max="15"></label>
             <label>たて <input type="number" id="height" value="8" min="5" max="15"></label>
             <button id="generate" class="btn btn-primary">あたらしいパズル</button>
+            <button id="print" class="btn btn-print">いんさつ</button>
         </div>
 
         <div id="loading" class="loading" style="display:none;">パズルをつくっています...</div>
@@ -39,11 +40,10 @@
             <div class="actions">
                 <button id="check" class="btn btn-success">こたえあわせ</button>
                 <button id="clear" class="btn btn-warning">ぜんぶけす</button>
-                <button id="print" class="btn btn-print">いんさつ</button>
             </div>
         </div>
     </div>
 
-    <script src="/static/script.js"></script>
+    <script src="/static/script.js?v=2"></script>
 </body>
 </html>
